# Email-Newsletter

./: Cargo.toml  README.md
.github/workflows/: audit.yml:Zone.Identifier
docs/: guidelines.md
docs/adr/: 0001-choose-actix.md
migrations/: 20250924133925_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
