[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang-19", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
reqwest="0.11"
serde = { version = "1.0.220", features = ["derive"] }
config = "0.13"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls", "macros",
	"postgres", "uuid",
	"chrono", "migrate"
]

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="email_newsletter"

